--- a/src/assets/common-style.css
+++ b/src/assets/common-style.css
@@ -56,12 +56,33 @@ align-items: center;
     background-position: center center;
     min-height:980px;
 }
+
 .col-12 {
     flex: 0 0 100%;
     max-width: 100%;
 }
-
-
+.react-responsive-modal-modal {
+    max-width:816px !important;
+    /* width:100% !important; */
+    padding: 99px 58px;
+}
+.moda_wrapper {
+margin-left:20px;
+margin-right:20px;
+}
+.mt-15 {
+margin-top:15px;
+}
+.align-end {
+    align-items: flex-end;
+}
+.no-wrape {
+flex-wrap: nowrap !important;
+} 
+.blank_space {
+    max-width: 112px;
+    width: 100%;
+}
 
 @media only screen and (min-width:768px) {
     .col-md-6 {
@@ -156,5 +177,8 @@ align-items: center;
     }
     .innovation_bg {
         padding: 202px 20px;
+    }
+    .mt-15 {
+        margin-top:0px;
     }
 }
