--- a/src/assets/common-style.css
+++ b/src/assets/common-style.css
@@ -222,4 +222,14 @@ img {
   .mt-15 {
     margin-top: 0px;
   }
+  .col-sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@media only screen and (max-width:400px) {
+  .full_width {
+    width: 100%;
+  }
 }
